[project]
name = "pyppeteer-stealth"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "websockets>=12.0",
]

[project.urls]
repository = "https://github.com/ekkoree2/pyppeteer-stealth"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyppeteer_stealth*"]
